@@ -38,8 +38,8 @@ status_cast_cancel: 0
 // 0 - remove nothing.
 // 1 - remove negative buffs (stripping, EF)
 // 2 - remove positive buffs (cooking)
-// 3 - remove all buffs that are not saved on official (default)
-debuff_on_logout: 3
+// 3 - remove both negative and positive buffs.
+debuff_on_logout: 1
 
 // Adjustment for the natural rate of resistance from status changes.
 // If 50, status defense is halved, and you need twice as much stats to block
